icr-jenkins-windows-ubuntu/security_group_win.tf
resource "aws_security_group" "project_vpc_sg_win" {
 name="project-vpc-sg-win"
 vpc_id = module.vpc.vpc_id

 egress {
   from_port = 0
   to_port = 0
   protocol = "-1"
   cidr_blocks = ["0.0.0.0/0"]
 }
 ingress {
   from_port = 3389
   to_port = 3389
   protocol = "TCP"
   security_groups = ["${aws_security_group.project_vpc_sg-bastion.id}"]
 }
  ingress {
   from_port = 22
   to_port = 22
   protocol = "TCP"
   security_groups = ["${aws_security_group.project_vpc_sg-bastion.id}"]
 }
 ingress {
   from_port = 3389
   to_port = 3389
   protocol = "TCP"
   cidr_blocks = ["195.206.189.94/32"]
   
 }
  ingress {
   from_port = 80
   to_port = 80 
   protocol = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
}
  ingress {
   from_port = 443
   to_port = 443 
   protocol = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
}
  ingress {
   from_port = 22
   to_port = 22
   protocol = "TCP"
   security_groups = ["${aws_security_group.project_vpc-jenkins-sg.id}"]
   
 }
  ingress {
   from_port = 22
   to_port = 22
   protocol = "TCP"
   cidr_blocks = ["0.0.0.0/0"]
   
 }
 
 ingress {
   from_port = 3389
   to_port = 3389
   protocol = "TCP"
   cidr_blocks = ["0.0.0.0/0"]
 }
 #check_mk could allow a local attacker to obtain sensitive information
 ingress {
   from_port = 5985
   to_port = 5985 
   protocol = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
 }
ingress {
   from_port = 5986
   to_port = 5986 
   protocol = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
}

 tags = {
   Name = "project-vpc-sg-win"
   Description = "allow-RDP"
 }
}
